5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1644_2711.log
== TEST (2019-04-16 14:46:47) 
-- CODE:
valor = float(input("dinheiros: "))
RU = int(input("quantidade de tickets: "))
tickets = float(input("valor do tickets: "))
passe = int(input("quantidade de passes: "))
bus = float(input("valor da passagem estudantil: "))

if(RU+tickets+passe+bus<=valor):
	mensagem = suficiente
else:
	mensagem = insuficiente
print(mensagem.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    mensagem = suficiente
NameError: name 'suficiente' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:47:42) 
-- CODE:
valor = float(input("dinheiros: "))
RU = int(input("quantidade de tickets: "))
tickets = float(input("valor do tickets: "))
passe = int(input("quantidade de passes: "))
bus = float(input("valor da passagem estudantil: "))

if(RU+tickets+passe+bus<=valor):
	mensagem = "suficiente"
else:
	mensagem = "insuficiente""
print(mensagem.upper())
-- ERROR:
File "XXXX", line 10
    mensagem = "insuficiente""
                             ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:48:04) 
-- CODE:
valor = float(input("dinheiros: "))
RU = int(input("quantidade de tickets: "))
tickets = float(input("valor do tickets: "))
passe = int(input("quantidade de passes: "))
bus = float(input("valor da passagem estudantil: "))

if(RU+tickets+passe+bus<=valor):
	mensagem = "suficiente"
else:
	mensagem = "insuficiente"
print(mensagem.upper())
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:50:00) 
-- CODE:
valor = float(input("dinheiros: "))
RU = int(input("quantidade de tickets: "))
tickets = float(input("valor do tickets: "))
passe = int(input("quantidade de passes: "))
bus = float(input("valor da passagem estudantil: "))

if(RU+tickets+passe+bus<=valor):
	mensagem = "suficiente"
else:
	mensagem = "insuficiente"
print(mensagem.upper())
-- EXECUTION TIME:
0.135967
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:51:08) 
-- CODE:
valor = float(input("dinheiros: "))
RU = int(input("quantidade de tickets: "))
tickets = float(input("valor do tickets: "))
passe = int(input("quantidade de passes: "))
bus = float(input("valor da passagem estudantil: "))

if(RU+tickets+passe+bus<=valor):
	mensagem = "suficiente"
else:
	mensagem = "insuficiente"
print(mensagem.upper())
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:52:44) 
-- CODE:
valor = float(input("dinheiros: "))
RU = int(input("quantidade de tickets: "))
tickets = float(input("valor do tickets: "))
passe = int(input("quantidade de passes: "))
bus = float(input("valor da passagem estudantil: "))

if(RU+tickets+passe+bus<=valor):
	mensagem = "suficiente"
else:
	mensagem = "insuficiente"
print(mensagem.upper())
-- EXECUTION TIME:
0.169605
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:54:12) 
-- CODE:
valor = float(input("dinheiros: "))
RU = int(input("quantidade de tickets: "))
tickets = float(input("valor do tickets: "))
passe = int(input("quantidade de passes: "))
bus = float(input("valor da passagem estudantil: "))
total = RU*tickets+passe*bus
if(total<=valor):
	mensagem = "suficiente"
else:
	mensagem = "insuficiente"
print(mensagem.upper())
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:55:13) 
-- CODE:
valor = float(input("dinheiros: "))
RU = int(input("quantidade de tickets: "))
tickets = float(input("valor do tickets: "))
passe = int(input("quantidade de passes: "))
bus = float(input("valor da passagem estudantil: "))
total = RU*tickets+passe*bus
if(total<=valor):
	mensagem = "suficiente"
else:
	mensagem = "insuficiente"
print(mensagem.upper())
-- EXECUTION TIME:
0.156077
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
